--- a/src/main/resources/templates/purge-attachments/config/configure-purge-attachments-space.vm
+++ b/src/main/resources/templates/purge-attachments/config/configure-purge-attachments-space.vm
@@ -5,6 +5,16 @@
     <title>$action.getText("com.drunkendev.confluence.plugins.attachment-tools.config.title")</title>
   </head>
   <body>
+    #applyDecorator("root")
+      #decoratorParam("helper" $action.helper)
+      #decoratorParam("mode" "view-space-administration")
+      #decoratorParam("context" "space-administration")
+    #applyDecorator ("root")
+      #decoratorParam ("context" "spaceadminpanel")
+      #decoratorParam ("selection" "configure-purge-attachments-space")
+      #decoratorParam ("title" "Attachment Purging")
+      #decoratorParam ("selectedTab" "admin")
+      #decoratorParam("helper" $i18n.helper)
     <p>
       <strong>TODO</strong>: Implement configuration for handling space
       settings. Settigns may include but are not limited to:
@@ -32,5 +42,7 @@
         or user.
       </li>
     </ul>
+    #end
+    #end
   </body>
 </html>
