--- a/src/main/resources/templates/purge-attachments/config/configure-purge-attachments-space.vm
+++ b/src/main/resources/templates/purge-attachments/config/configure-purge-attachments-space.vm
@@ -6,60 +6,70 @@
   </head>
   <body>
     #applyDecorator("root")
-    #decoratorParam("helper" $action.helper)
-    #decoratorParam("mode" "view-space-administration")
-    #decoratorParam("context" "space-administration")
+      #decoratorParam ("helper" $action.helper)
+      #decoratorParam ("mode" "view-space-administration")
+      #decoratorParam ("context" "space-administration")
     #applyDecorator ("root")
-    #decoratorParam ("context" "spaceadminpanel")
-    #decoratorParam ("selection" "configure-purge-attachments-space")
-    #decoratorParam ("title" "Attachment Purging")
-    #decoratorParam ("selectedTab" "admin")
-    #decoratorParam("helper" $i18n.helper)
-    <p>
-      <strong>TODO</strong>: Implement ability to turn on/off attachment
-      purging. The following options may be chosen to determin where settings
-      are obtained from.
-    </p>
-    <ul>
-      <li>
-        <strong>Disabled</strong>: this space will be ignored even if global
-        options would otherwise process this space.
-      </li>
-      <li>
-        <strong>Global options (default)</strong>: use the global configured
-        settings for attachment processing.
-      </li>
-      <li>
-        <strong>Space level options</strong>: custom configuration defined
-        exclusively for this space. If chosen the user may provide the following
-        options.
-        <ul>
-          <li>
-            <strong>Process by age</strong>: Prior attachment versions may only
-            be kept if the attachment's modified date is within a given period.
-          </li>
-          <li>
-            <strong>Process by limits</strong>: Allows specifying a maximum
-            count of prior versions for each attachment.
-          </li>
-          <li>
-            <strong>Process by total size limit</strong>: Allow all versions of
-            an attachment to not exceede a given size limit. If the size limit
-            is imposed then prior versions are deleted until the limit is
-            satisfied.
-          </li>
-          <li>
-            <strong>Report only</strong>: Do not perform any action, just use
-            the email alerting function which must be present.
-          </li>
-          <li>
-            <strong>Email alerting</strong>: Email results to a given email
-            address or user.
-          </li>
-        </ul>
-      </li>
-    </ul>
+      #decoratorParam ("context" "spaceadminpanel")
+      #decoratorParam ("selection" "configure-purge-attachments-space")
+      #decoratorParam ("title" "Attachment Purging")
+      #decoratorParam ("selectedTab" "admin")
+      #decoratorParam ("helper" $i18n.helper)
+
+    <form action="#" method="post" class="aui">
+      <h2>Attachment Purging</h2>
+      <fieldset class="group">
+        <legend><span>Enable Purging</span></legend>
+        <div class="radio">
+          <input class="radio" type="radio" name="mode" id="mode-1" value="1">
+          <label for="mode-1">Disabled</label>
+          <div class="description">
+            Processing of this space will be ignored.
+          </div>
+        </div>
+        <div class="radio">
+          <input class="radio" type="radio"  name="mode" id="mode-2" value="2" checked="checked">
+          <label for="mode-2">Enabled using global options</label>
+          <div class="description">
+            Use globally configured options which may be disabled.
+          </div>
+        </div>
+        <div class="radio">
+          <input class="radio" type="radio"  name="mode" id="mode-3" value="3">
+          <label for="mode-3">Enabled using space options</label>
+          <div class="description">
+            Use custom settings specified here.
+          </div>
+        </div>
+      </fieldset>
+      <div id='space-options'>
+        #parse ("/templates/purge-attachments/config/configure-purge-attachments-common.vm")
+      </div>
+
+      <div class="buttons-container">
+        <div class="buttons">
+          <input class="button submit" type="submit" value="Save">
+          <a href="#">Cancel</a>
+        </div>
+      </div>
+
+    </form>
+
     #end
     #end
+
+<script>
+AJS.$(function() {
+  var $ = AJS.$;
+  $('input[name=mode]').change(function() {
+    if ($('input[name=mode]:checked').val() === '3') {
+      $("#space-options input").removeAttr('disabled');
+    } else {
+      $("#space-options input").attr('disabled','disabled');
+    }
+  }).change();
+});
+</script>
+
   </body>
 </html>
